<resources>
    <string name="app_name">Bluetooth Relay Board BT22A16</string>
    <string name="connectBluetooth">Connect</string>
    <string name="disconnectBluetooth">Disconnect</string>
    <string name="pairedDevicesLabel">Paired devices</string>
    <string name="toggle">Toggle</string>
    <string name="title_activity_settings">settings</string>
    <string name="changePin">Change pin code</string>
    <string name="pinExample">e.g.: 1234</string>
    <string name="nameExample">e.g.: HC-06</string>
    <string name="pulseDurationText">Pulse duration:</string>
    <string name="okButton">OK</string>
    <string name="smallestPulseValue" translatable="false">0.1 s</string>
    <string name="settings">Settings</string>
    <string name="changeDeviceName">Change device name</string>
</resources>
