<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePin"
        android:id="@+id/pinTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="4"
        android:ems="10"
        android:id="@+id/pinText"
        android:layout_below="@+id/pinTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/pinExample"
        android:inputType="numberPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinText"
        android:text="@string/changeDeviceName"
        android:id="@+id/deviceNameLabel"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:ems="10"
        android:id="@+id/deviceNameText"
        android:layout_below="@+id/deviceNameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/nameExample" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pulseDurationText"
        android:id="@+id/pulseDurationLabel"
        android:layout_below="@+id/deviceNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smallestPulseValue"
        android:id="@+id/timeLabel"
        android:layout_below="@+id/deviceNameText"
        android:layout_toRightOf="@+id/pulseDurationLabel"
        android:layout_toEndOf="@+id/pulseDurationLabel"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pulseDuration"
        android:max="49"
        android:progress="0"
        android:indeterminate="false"
        android:layout_below="@+id/pulseDurationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/okButton"
        android:id="@+id/okButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
